<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.IndividualNotificationActivity">

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="576dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/TitleBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="clock" />

        <Switch
            android:id="@+id/ActivateAlarmSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Activate Alarm" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="27dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deletebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="deleteAlarmOnClick"
                android:text="Delete" />

            <Button
                android:id="@+id/savebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10000"
                android:onClick="saveNotificationOnClick"
                android:text="Save" />
        </LinearLayout>

        <TextView
            android:id="@+id/DeletedTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0303"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>